<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Book Store</string>
    <string name="empty_state_text">No books added yet\n Click on Add (+) button to start</string>
    <string name="sell">Sell</string>
    <string name="stock_quantity">Current Stock :</string>
    <string name="no_content_desc">No Content Description</string>
    <string name="out_of_stock">Currently out of stock</string>
    <string name="order_btn_text">Order</string>
    <string name="hint_book_title">Book Title *</string>
    <string name="hint_book_author">Book Author</string>
    <string name="hint_book_price">Book Price *</string>
    <string name="quantity">Quantity *</string>
    <string name="hint_supplier_name">Supplier Name *</string>
    <string name="hint_supplier_phone">Supplier Phone Number *</string>
    <string name="hint_supplier_email">Supplier Email ID</string>
    <string name="hint_book_isbn">Book ISBN</string>
    <string name="add_new_book">New Book</string>
    <string name="edit_book">Edit Book</string>
    <string name="delete_book">Delete Book</string>
    <string name="save_book">SAVE</string>
    <string name="discard_changes">Discard changes</string>
    <string name="cancel">Cancel</string>
    <string name="yes">YES</string>
    <string name="title_empty_error">Book Title cannot be left empty</string>
    <string name="unknown_author">Unknown Author</string>
    <string name="isbn_empty">No ISBN available</string>
    <string name="price_invalid_error">Not a valid price</string>
    <string name="quantity_empty_error">Quantity cannot be left empty</string>
    <string name="supplier_name_empty_error">Supplier name cannot be left empty</string>
    <string name="supplier_details_error">Supplier Phone or Email is required</string>
    <string name="no_save">Book Details not saved</string>
    <string name="save_success_book">Book Details updated!</string>
    <string name="confirm_delete">Delete this book?</string>
    <string name="delete">DELETE</string>
    <string name="negative_quantity_error">Quantity cannot be less than 0</string>
    <string name="contact_supplier">To order, contact our supplier %s via:</string>
    <string name="email_at">Email at %s</string>
    <string name="call_at">Call at %s</string>
    <string name="email_subject_text">Confirmation: Book Order - %s</string>
    <string name="email_body_text" tools:ignore="PluralsCandidate">Hello Sir/Ma\'am!\n\n\tWe\'re delighted to order a set of %1d copies of the book titled: %2s. Kindly process the request as soon as possible.\n\nRegards,\nRohit Bhargava\nDirector\nXYZ Book Store Ltd.</string>
    <string name="no_app_found">No Apps found to proceed</string>
    <string name="rupee_text_symbol">\u20B9</string>
    <string name="book_details">Book Details</string>
    <string name="supplier_details">Supplier Details</string>
</resources>
