<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/supplierName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/margin16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/contact_supplier"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:drawableEnd="@drawable/ic_email"
        android:drawablePadding="32dp"
        android:text="@string/email_at"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:drawableEnd="@drawable/ic_phone"
        android:drawablePadding="32dp"
        android:text="@string/call_at"
        android:textAppearance="?android:textAppearanceMedium" />

</LinearLayout>